--- a/app/src/main/res/layout/fragment_tab_lay_out_biography.xml
+++ b/app/src/main/res/layout/fragment_tab_lay_out_biography.xml
@@ -3,12 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:padding="10dp"
     tools:context=".TabLayOutBiographyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:scrollbarThumbVertical="@android:color/white">
+
+        <TextView
+            android:id="@+id/txtv_artistInfo_ID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:textColor="@color/white"
+            android:textSize="17dp"/>
+
+    </ScrollView>
 
 </FrameLayout>
