--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,13 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="235dp"
         android:src="@drawable/music_box_logo" />
 
     <EditText
         android:id="@+id/editEmailID"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="45dp"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="24dp"
         android:autofillHints="emailAddress"
@@ -30,7 +30,7 @@
     <EditText
         android:id="@+id/editPasswID"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/white"
         android:hint="contraseña"
@@ -42,7 +42,7 @@
     <Button
         android:id="@+id/buttonAccederID"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="62dp"
         android:layout_marginBottom="24dp"
         android:text="Acceder"
         android:textSize="16sp" />
@@ -57,5 +57,14 @@
         android:textSize="20sp">
 
     </TextView>
+
+    <ProgressBar
+        android:id="@+id/login_progress_circular_ID"
+        android:layout_width="370dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/black"
+        android:visibility="invisible" />
 
 </LinearLayout>
