--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -47,6 +47,22 @@
         android:layout_width="match_parent"
         android:layout_height="350dp">
 
+        <ProgressBar
+            android:id="@+id/player_progress_circular_ID"
+            android:layout_width="370dp"
+            android:layout_height="65dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="143dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="142dp"
+            android:background="@color/black"
+            android:visibility="invisible" />
+
         <ImageView
             android:id="@+id/imgView_cover_pic_ID"
             android:layout_width="match_parent"
@@ -58,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="-2dp"
             android:src="@drawable/gradient_background" />
 
     </RelativeLayout>
