--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -50,18 +50,17 @@
         <ProgressBar
             android:id="@+id/player_progress_circular_ID"
             android:layout_width="370dp"
-            android:layout_height="65dp"
+            android:layout_height="55dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="143dp"
+            android:layout_marginTop="142.5dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="142dp"
+            android:layout_marginBottom="142.5dp"
             android:background="@color/black"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <ImageView
             android:id="@+id/imgView_cover_pic_ID"
