--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -10,26 +10,27 @@
     <LinearLayout
         android:id="@+id/layout_play_lists_ID"
         android:layout_width="150dp"
-        android:layout_height="75dp"
+        android:layout_height="55dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="100dp"
-            android:layout_height="75dp"
+            android:layout_height="55dp"
             android:gravity="center_vertical"
             android:text="Playlists"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
 
         <ImageView
+            android:id="@+id/playLists_icon_ID"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
-            android:src="@drawable/ic_baseline_playlist_play">
+            android:src="@drawable/ic_baseline_playlist_play_off">
 
         </ImageView>
 
@@ -38,25 +39,26 @@
     <LinearLayout
         android:id="@+id/layout_favoritos_ID"
         android:layout_width="150dp"
-        android:layout_height="75dp"
+        android:layout_height="55dp"
         android:layout_marginLeft="20dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="100dp"
-            android:layout_height="75dp"
+            android:layout_height="55dp"
             android:gravity="center_vertical"
             android:text="Favoritos"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
 
         <ImageView
+            android:id="@+id/favourites_icon_ID"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
-            android:src="@drawable/ic_baseline_favorite_24">
+            android:src="@drawable/ic_baseline_favorite_off">
 
         </ImageView>
 
@@ -65,25 +67,26 @@
     <LinearLayout
         android:id="@+id/layout_history_ID"
         android:layout_width="150dp"
-        android:layout_height="75dp"
+        android:layout_height="55dp"
         android:layout_marginLeft="20dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="100dp"
-            android:layout_height="75dp"
+            android:layout_height="55dp"
             android:gravity="center_vertical"
             android:text="Historial"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
 
         <ImageView
+            android:id="@+id/history_icon_ID"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
-            android:src="@drawable/ic_baseline_history_24">
+            android:src="@drawable/ic_baseline_history_off">
 
         </ImageView>
 
@@ -93,8 +96,19 @@
         android:id="@+id/library_recycler_view_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="0dp">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <ProgressBar
+        android:id="@+id/library_progress_circular_ID"
+        android:layout_width="370dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="142.5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="142.5dp"
+        android:background="@color/black"
+        android:visibility="invisible" />
 
 </LinearLayout>
