--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -20,5 +20,7 @@
         android:layout_marginLeft="20dp"
         android:gravity="center"
         android:text="Album"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold" />
 </LinearLayout>
