--- a/app/src/main/res/layout/miscellaneous_song_item.xml
+++ b/app/src/main/res/layout/miscellaneous_song_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/audio_itemID"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
@@ -8,45 +7,47 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/song_favourites_item_imageID"
+        android:id="@+id/song_miscellanous_item_imageID"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/ic_launcher_foreground"
         android:padding="5dp" />
 
-    <TextView
-        android:id="@+id/artistID"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+    <LinearLayout
+        android:id="@+id/linear_layout_Id"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
-        android:gravity="center"
-        android:text="Artist"
-        android:textColor="@color/white" />
+        android:layout_toEndOf="@id/song_miscellanous_item_imageID"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:gravity="center"
-        android:text="-"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/txtV_songID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="song"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/songID"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:gravity="center"
-        android:text="song"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/txtV_artistID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="Artist"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/item_menu_ID"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="150dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/linear_layout_Id"
         android:background="@drawable/ic_baseline_more_vert"
         android:padding="5dp" />
 
-</LinearLayout>
+</RelativeLayout>
