--- a/app/src/main/res/layout/activity_play_lists.xml
+++ b/app/src/main/res/layout/activity_play_lists.xml
@@ -11,7 +11,19 @@
     <ListView
         android:id="@+id/playlists_listview_ID"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/img_view_add_circle_ID"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="320dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/cardview_dark_background"
+        android:src="@drawable/add_circle" />
 
 </RelativeLayout>
