--- a/app/src/main/res/layout/add_playlist_dialog_layout.xml
+++ b/app/src/main/res/layout/add_playlist_dialog_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        android:hint="Titulo"
+        android:hint="Titulo *"
         android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/bottom_navigation_icon_colors" />
