--- a/app/src/main/res/layout/playlists_listview_item.xml
+++ b/app/src/main/res/layout/playlists_listview_item.xml
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:background="@color/black"
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/txt_view_playlist_name_ID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="playlistName"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        android:textStyle="bold">
-    </TextView>
+    <LinearLayout
+        android:id="@+id/playlist_item_linear_layout_Id"
+        android:layout_width="360dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/txtV_playlist_title_ID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="Title"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtV_playlist_description_ID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="Description"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/paly_lists_item_menu_ID"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/playlist_item_linear_layout_Id"
+        android:background="@drawable/ic_baseline_more_vert"
+        android:padding="5dp" />
+
+</RelativeLayout>
