--- a/app/src/main/res/layout/fragment_tab_lay_out_play_lists.xml
+++ b/app/src/main/res/layout/fragment_tab_lay_out_play_lists.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,10 +5,10 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".PlayListsActivity">
+    tools:context=".TabLayOutPlayListsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/playlists_recycler_view_ID"
+        android:id="@+id/playlists_fragment_recycler_view_ID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
