--- a/app/src/main/res/menu/favourites_item_pop_up_menu.xml
+++ b/app/src/main/res/menu/favourites_item_pop_up_menu.xml
@@ -4,11 +4,11 @@
 
     <item
         android:id="@+id/agregar_a_playlist_desde_favoritos_ID"
-        android:title="Agregar a playlist"
+        android:title="Agregar a lista de reproducción"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/eliminar_de_favoritosID"
-        android:title="Eliminar de favoritos"
+        android:title="Eliminar"
         app:showAsAction="never" />
 </menu>
