--- a/app/src/main/res/layout/activity_play_list_details.xml
+++ b/app/src/main/res/layout/activity_play_list_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".AddToPlayListActivityListView">
+    tools:context=".PlayListDetailsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,27 +14,19 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imagv_back_ID"
             android:layout_width="30dp"
-            android:layout_height="match_parent"
+            android:layout_height="30dp"
             android:src="@drawable/ic_baseline_arrow_back" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Seleccionar lista"
-            android:textColor="@color/white"
-            android:textSize="25dp"
-            android:textStyle="bold" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/play_lists_recycler_view_ID"
+        android:id="@+id/play_lists_details_recycler_view_ID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
