--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/musica_ID"
         android:icon="@drawable/ic_baseline_library_music"
-        android:title="Música" />
+        android:title="Biblioteca" />
     <item
         android:id="@+id/perfil_ID"
         android:icon="@drawable/ic_baseline_person"
