--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="20dp"
         android:text="Recomendaciones"
         android:textColor="@color/white"
         android:textSize="20dp" />
@@ -36,7 +36,7 @@
         android:id="@+id/sliderView_Recomendaciones_ID"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         app:sliderAnimationDuration="600"
         app:sliderAutoCycleDirection="right"
         app:sliderAutoCycleEnabled="true"
@@ -55,29 +55,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="320dp"
-        android:text="Novedades"
+        android:layout_marginTop="20dp"
+        android:text="Listas de la  comunidad"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
-    <com.smarteist.autoimageslider.SliderView
-        android:id="@+id/sliderView_Novedades_ID"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comunity_plalists_recycler_view_ID"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="350dp"
-        app:sliderAnimationDuration="600"
-        app:sliderAutoCycleDirection="right"
-        app:sliderAutoCycleEnabled="true"
-        app:sliderIndicatorAnimationDuration="600"
-        app:sliderIndicatorGravity="center_horizontal|bottom"
-        app:sliderIndicatorMargin="15dp"
-        app:sliderIndicatorOrientation="horizontal"
-        app:sliderIndicatorPadding="3dp"
-        app:sliderIndicatorRadius="2dp"
-        app:sliderIndicatorSelectedColor="#5A5A5A"
-        app:sliderIndicatorUnselectedColor="#FFF"
-        app:sliderScrollTimeInSec="2"
-        app:sliderStartAutoCycle="true" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp" />
 
-
-</FrameLayout>
+</LinearLayout>
