--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -25,14 +25,14 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:background="@color/black"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_baseline_account_circle" />
+        android:src="@drawable/yo" />
 
     <LinearLayout
         android:layout_width="match_parent"
