--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -16,35 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/slider_item_txt_artist_ID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:shadowColor="@color/black"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="50"
-            android:text="artist"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:shadowColor="@color/black"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="50"
-            android:text="-"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        
         <TextView
             android:id="@+id/slider_item_txt_song_name_ID"
             android:layout_width="wrap_content"
@@ -58,6 +31,19 @@
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/slider_item_txt_artist_ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:shadowColor="@color/black"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="50"
+            android:text="artist"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
     </LinearLayout>
 
 </RelativeLayout>
