--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".NavigationActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/search_icon_ID"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/ic_baseline_search" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/search_icon_ID"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/ic_baseline_search" />
 
     <FrameLayout
         android:id="@+id/frame_layout_id"
         android:layout_width="match_parent"
-        android:layout_height="572dp" />
+        android:layout_height="570dp"
+        android:layout_above="@+id/bottom_navigation_ID"
+        android:layout_marginBottom="0dp"
+        android:orientation="vertical" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_ID"
@@ -37,4 +34,4 @@
         app:itemTextColor="@color/bottom_navigation_icon_colors"
         app:menu="@menu/bottom_navigation_menu" />
 
-</LinearLayout>
+</RelativeLayout>
