--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -22,7 +22,7 @@
             app:cardCornerRadius="100dp">
 
             <ImageView
-                android:id="@+id/imgv_camera_ID"
+                android:id="@+id/imgv_avatar_ID"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="50dp"
