--- a/app/src/main/res/layout/activity_play_list_details.xml
+++ b/app/src/main/res/layout/activity_play_list_details.xml
@@ -55,6 +55,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/play_lists_details_recycler_view_ID"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#3C3A3A" />
 
 </LinearLayout>
