--- a/app/src/main/res/layout/album_song_item.xml
+++ b/app/src/main/res/layout/album_song_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="1dp"
+    android:layout_marginBottom="1dp"
     android:background="@color/black"
     android:orientation="horizontal">
 
