--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -8,26 +8,11 @@
     android:orientation="vertical"
     tools:context=".LibraryFragment">
 
-    <TextView
-        android:id="@+id/txtV_artist_activity_name_ID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="240dp"
-        android:layout_marginBottom="10dp"
-        android:shadowColor="@color/black"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="0"
-        android:text="Bibiloteca"
-        android:textColor="@color/white"
-        android:textSize="35dp"
-        android:textStyle="bold" />
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/library_fragment_TabLayOutID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@color/black"
         app:tabSelectedTextColor="@color/white"
         app:tabTextColor="#7D7F80" />
