--- a/app/src/main/res/layout/fragment_tab_lay_out_favourites.xml
+++ b/app/src/main/res/layout/fragment_tab_lay_out_favourites.xml
@@ -8,6 +8,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favourites_fragment_recycler_view_ID"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#3C3A3A" />
 
 </FrameLayout>
