--- a/app/src/main/res/layout/fragment_tab_lay_out_albums.xml
+++ b/app/src/main/res/layout/fragment_tab_lay_out_albums.xml
@@ -8,6 +8,7 @@
     <ListView
         android:id="@+id/albumsListViewID"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="#3C3A3A" />
 
 </FrameLayout>
