--- a/app/src/main/res/drawable-v24/tab_indicator.xml
+++ b/app/src/main/res/drawable-v24/tab_indicator.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:angle="100"
+        android:angle="0"
         android:centerColor="@color/black"
         android:endColor="#3C3A3A"
-        android:startColor="#3C3A3A" />
+        android:startColor="#3C3A3A"
+        android:type="linear" />
 </shape>
